--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,4 +4,4 @@ layout: default
 {% include JB/setup %}
 {% include themes/twitter/post.html %}
 
-<link href="/assets/themes/twitter/css/pygments.css" rel="stylesheet">
+<link href="{{ ASSET_PATH }}/css/pygments.css" rel="stylesheet">
